TCOTA-921 adding Brightspace connector